--- a/app/newtab.html
+++ b/app/newtab.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<!-- build:css styles/main.css -->
+	<link rel="stylesheet" href="styles/main.css">
+	<!-- endbuild -->
 	<!-- build:css styles/vendor.css -->
+	<link rel="stylesheet" href="bower_components/icomoon/styles/style.css">
 	<!-- bower:css -->
 	<!-- endbower -->
-	<!-- endbuild -->
-	<!-- build:css styles/main.css -->
-	<link href="styles/main.css" rel="stylesheet">
 	<!-- endbuild -->
 </head>
 <body id="ng-app" ng-app="TabMagicApp">
@@ -43,6 +44,8 @@
 	<script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 	<script src="bower_components/angular-animate/angular-animate.js"></script>
+	<script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
+	<script src="bower_components/ngFx/dist/ngFx.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
