* Added nav-bar to the bottom. * Corrected sizing issues.

--- a/app/popup.html
+++ b/app/popup.html
@@ -27,14 +27,26 @@
 		<div class="row content"></div>
 		<!-- End Content -->
 
-		<!-- Bottom Nav Bar -->
+		<!-- Nav Bar -->
 		<div class="row nav-bar">
-			<div class="small-3 columns text-center">
-				<i class="fa fa-repeat fa-lg"></i>
+			<div class="small-3 columns text-center clickable">
+				<i class="fa icon-history fa-2x"></i>
+				<small>Recent</small>
+			</div>
+			<div class="small-3 columns text-center clickable">
+				<i class="fa icon-history fa-2x"></i>
+				<small>Recent</small>
+			</div>
+			<div class="small-3 columns text-center clickable">
+				<i class="fa icon-history fa-2x"></i>
+				<small>Recent</small>
+			</div>
+			<div class="small-3 columns text-center clickable">
+				<i class="fa icon-history fa-2x"></i>
 				<small>Recent</small>
 			</div>
 		</div>
-		<!-- End Bottom Nav Bar -->
+		<!-- End Nav Bar -->
 
 	</div>
 
