--- a/app/options.html
+++ b/app/options.html
@@ -31,6 +31,7 @@
 	<script src="bower_components/angular-animate/angular-animate.js"></script>
 	<script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
 	<script src="bower_components/ngFx/dist/ngFx.js"></script>
+	<script src="bower_components/jquery-nicescroll/jquery.nicescroll.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
