* Modularized some of the code.

--- a/app/popup.html
+++ b/app/popup.html
@@ -141,6 +141,9 @@
 
 	<!-- build:js scripts/scripts.js -->
 	<script src="scripts/app.js"></script>
+	<script src="scripts/tabs.js"></script>
+	<script src="scripts/windows.js"></script>
+	<script src="scripts/sessions.js"></script>
 	<script src="scripts/popup.js"></script>
 	<script src="scripts/utils.js"></script>
 	<!-- endbuild -->
