* Working on tab suspension.

--- a/app/popup.html
+++ b/app/popup.html
@@ -20,11 +20,14 @@
 			<div class="small-12 columns">
 				<h4><span class="primary-color">TAB</span>MAGIC</h4>
 			</div>
-			<div class="action-button text-center clickable fx-fade-normal" title="Restore selected" ng-show="actionButtonShow('recentlyClosed') && navigation === 'recentlyClosed'" ng-click="createTab(true)">
+			<div class="action-button text-center clickable fx-fade-normal" title="Restore selected" ng-show="actionButtonShow('recentlyClosed') && navigation === 'recentlyClosed'" ng-click="recentlyClosedReopen()">
 				<i class="fa icon-refresh fa-2x"></i>
 			</div>
-			<div class="action-button text-center clickable fx-fade-normal" title="Bring selected to one" ng-show="actionButtonShow('bringToOne') && navigation === 'bringToOne'" ng-click="createTab(false, true)">
+			<div class="action-button text-center clickable fx-fade-normal" title="Bring selected to one" ng-show="actionButtonShow('bringToOne') && navigation === 'bringToOne'" ng-click="bringToOneTab(false)">
 				<i class="fa icon-filter-list fa-2x"></i>
+			</div>
+			<div class="action-button text-center clickable fx-fade-normal" title="Suspend selected" ng-show="actionButtonShow('suspend') && navigation === 'suspend'" ng-click="suspendSelectedTabs()">
+				<i class="fa icon-pause fa-2x"></i>
 			</div>
 		</div>
 		<!-- End Header -->
@@ -80,14 +83,57 @@
 					<div class="small-12 columns">
 
 						<!-- This Tab -->
-						<div class="row" ng-show="tabIsSuspended()">
+						<div class="row item" ng-show="currentTabIsSuspended()">
 							<div class="small-12 columns">Tab is currently suspended</div>
 						</div>
-						<div class="row clickable" ng-show="!tabIsSuspended()">
+						<div class="row item clickable" ng-show="currentTabIsSuspended()">
+							<div class="small-1 columns no-padding-right"><i class="fa icon-play-circle-outline fa-lg primary-color"></i></div>
+							<div class="small-11 columns">Unsuspend this tab</div>
+						</div>
+						<div class="row item clickable" ng-show="!currentTabIsSuspended()" ng-click="suspendCurrentTab()">
 							<div class="small-1 columns no-padding-right"><i class="fa icon-pause-circle-outline fa-lg primary-color"></i></div>
 							<div class="small-11 columns">Suspend this tab</div>
 						</div>
 						<!-- End This Tab -->
+
+						<!-- Other Tabs -->
+						<div class="row item clickable">
+							<div class="small-1 columns no-padding-right"><i class="fa icon-pause-circle-fill fa-lg primary-color"></i></div>
+							<div class="small-11 columns">Suspend all tabs</div>
+						</div>
+						<div class="row item clickable">
+							<div class="small-1 columns no-padding-right"><i class="fa icon-play-circle-fill fa-lg primary-color"></i></div>
+							<div class="small-11 columns">Unsuspend all tabs</div>
+						</div>
+						<!-- End Other Tabs -->
+
+						<!-- Select Tabs -->
+						<div class="row title">
+							<div class="small-12 columns">Suspend select tabs</div>
+						</div>
+						<div class="row" ng-repeat="window in windows">
+							<div class="small-12 columns">
+								<div class="row item window clickable" ng-click="window.tmCollapsed = !window.tmCollapsed">
+									<div class="small-10 columns">
+										<span ng-show="window.focused">Window #{{$index + 1}} (Current)</span>
+										<span ng-show="!window.focused">Window #{{$index + 1}}</span>
+									</div>
+									<div class="small-2 columns text-right">
+										<i class="fa icon-expand-more fa-lg" ng-show="!window.tmCollapsed" disable-animate></i>
+										<i class="fa icon-chevron-right fa-lg" ng-show="window.tmCollapsed" disable-animate></i>
+									</div>
+								</div>
+								<div class="collapsable" collapse="window.tmCollapsed">
+									<div class="row item clickable" ng-class="{ selected: tab.tmSelected }" ng-repeat="tab in window.tabs" ng-click="tab.tmSelected = !tab.tmSelected">
+										<div class="small-1 columns no-padding-right" ng-show="'' !== tab.favIconUrl && tab.favIconUrl">
+											<img ng-src="{{tab.favIconUrl}}" />
+										</div>
+										<div class="columns" ng-class="{ 'small-11': '' !== tab.favIconUrl && tab.favIconUrl, 'small-12': '' === tab.favIconUrl || !tab.favIconUrl }" ng-bind="tab.title"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- End Select Tabs -->
 
 					</div>
 				</div>
@@ -111,11 +157,11 @@
 				<i class="fa icon-history fa-2x"></i><br />
 				<small>Recent</small>
 			</div>
-			<div class="small-3 columns text-center clickable" ng-class="{ selected: navigation === 'bringToOne' }" ng-click="navigation = 'bringToOne'">
+			<div class="small-3 columns text-center clickable" ng-class="{ selected: navigation === 'bringToOne' }" ng-click="navigation = 'bringToOne'; getAllWindows()">
 				<i class="fa icon-filter-list fa-2x"></i><br />
 				<small>Bring to One</small>
 			</div>
-			<div class="small-3 columns text-center clickable" ng-class="{ selected: navigation === 'suspend' }" ng-click="navigation = 'suspend'">
+			<div class="small-3 columns text-center clickable" ng-class="{ selected: navigation === 'suspend' }" ng-click="navigation = 'suspend'; getAllWindows()">
 				<i class="fa icon-pause-circle-outline fa-2x"></i><br />
 				<small>Suspend</small>
 			</div>
