--- a/app/popup.html
+++ b/app/popup.html
@@ -19,7 +19,7 @@
 		<div class="nav">
 			<div class="element logo">
 				<div class="icon">
-					<span class="primary-color">T</span><span class="white-color">M</span>
+					<span class="primary">T</span><span class="white">M</span>
 				</div>
 			</div>
 			<div class="element" ng-class="{ selected: navigation === 'recentlyClosed' }" ng-click="navigation = 'recentlyClosed'; sessions.recentlyClosed.removeSelections()">
@@ -38,7 +38,7 @@
 				<div class="text">Snooze</div>
 				<div class="icon"><i class="fa icon-timer fa-2x"></i></div>
 			</div>
-			<div class="element" ng-class="{ selected: navigation === 'settings' }" ng-click="navigation = 'settings'">
+			<div class="element" ng-class="{ selected: navigation === 'settings' }" ng-click="navigation = 'settings'; settings.init()">
 				<div class="text">Settings</div>
 				<div class="icon"><i class="fa icon-settings fa-2x"></i></div>
 			</div>
@@ -51,7 +51,7 @@
 			<!-- Header -->
 			<div class="row header no-margin-side overflow-visible" add-border="content">
 				<div class="small-12 columns">
-					<h5><span class="primary-color">TAB</span>MAGIC</h5>
+					<h5><span class="primary">TAB</span>MAGIC</h5>
 				</div>
 				<div class="action-button text-center clickable fx-fade-normal" title="Restore selected" ng-show="actionButtonShow('recentlyClosed') && navigation === 'recentlyClosed'" ng-click="sessions.recentlyClosed.reopen()">
 					<i class="fa icon-refresh fa-2x"></i>
@@ -183,22 +183,22 @@
 								<div class="small-12 columns">Tab is currently suspended</div>
 							</div>
 							<div class="row item clickable" ng-show="currentTabIsSuspended()">
-								<div class="small-1 columns no-padding-right"><i class="fa icon-play-circle-outline fa-lg primary-color"></i></div>
+								<div class="small-1 columns no-padding-right"><i class="fa icon-play-circle-outline fa-lg primary"></i></div>
 								<div class="small-11 columns">Unsuspend this tab</div>
 							</div>
 							<div class="row item clickable" ng-show="!currentTabIsSuspended()" ng-click="suspendCurrentTab()">
-								<div class="small-1 columns no-padding-right"><i class="fa icon-pause-circle-outline fa-lg primary-color"></i></div>
+								<div class="small-1 columns no-padding-right"><i class="fa icon-pause-circle-outline fa-lg primary"></i></div>
 								<div class="small-11 columns">Suspend this tab</div>
 							</div> -->
 							<!-- End This Tab -->
 
 							<!-- Other Tabs -->
 							<!-- <div class="row item clickable">
-								<div class="small-1 columns no-padding-right"><i class="fa icon-pause-circle-fill fa-lg primary-color"></i></div>
+								<div class="small-1 columns no-padding-right"><i class="fa icon-pause-circle-fill fa-lg primary"></i></div>
 								<div class="small-11 columns">Suspend all tabs</div>
 							</div>
 							<div class="row item clickable">
-								<div class="small-1 columns no-padding-right"><i class="fa icon-play-circle-fill fa-lg primary-color"></i></div>
+								<div class="small-1 columns no-padding-right"><i class="fa icon-play-circle-fill fa-lg primary"></i></div>
 								<div class="small-11 columns">Unsuspend all tabs</div>
 							</div> -->
 							<!-- End Other Tabs -->
@@ -268,67 +268,75 @@
 									</div>
 									<div class="row overflow-hidden" collapse="settings.snooze.tmCollapsed">
 										<div class="small-4 columns">
-											<p class="small-margin-top"><strong>Snooze Times</strong></p>
+											<p class="settings-section-name">
+												<strong>Snooze Times</strong>
+											</p>
 										</div>
 										<div class="small-8 columns">
 											<div class="row">
 												<div class="small-6 columns">
-													<label for="workdayStarts" class="inline">Workday Starts</label>
+													<label for="workdayStarts" class="inline">
+														Workday Starts&nbsp;&nbsp;
+														<i class="fa fa-check-circle success fx-fade" ng-show="settings.snooze.data.workdayStarts.saved"></i>
+													</label>
 												</div>
 												<div class="small-6 columns">
-													<select id="workdayStarts" class="radius" ng-model="settings.snooze.workdayStarts.data" ng-options="option for option in settings.snooze.workdayStarts.options">
-														<option value="">-- Choose time --</option>
-													</select>
-												</div>
-											</div>
-											<div class="row">
-												<div class="small-6 columns">
-													<label for="workdayEnds" class="inline">Workday Ends</label>
-												</div>
-												<div class="small-6 columns">
-													<select id="workdayEnds" class="radius" ng-model="settings.snooze.workdayEnds.data" ng-options="option for option in settings.snooze.workdayEnds.options">
-														<option value="">-- Choose time --</option>
-													</select>
+													<select id="workdayStarts" class="radius" ng-model="settings.snooze.data.workdayStarts.model" ng-required="true" ng-options="option for option in settings.snooze.data.workdayStarts.options" ng-change="settings.save('settings.snooze.data.workdayStarts')"></select>
 												</div>
 											</div>
 											<div class="row">
 												<div class="small-6 columns">
-													<label for="weekStarts" class="inline">Week Starts</label>
+													<label for="workdayEnds" class="inline">
+														Workday Ends&nbsp;&nbsp;
+														<i class="fa fa-check-circle success fx-fade" ng-show="settings.snooze.data.workdayEnds.saved"></i>
+													</label>
 												</div>
 												<div class="small-6 columns">
-													<select id="weekStarts" class="radius" ng-model="settings.snooze.weekStarts.data" ng-options="option for option in settings.snooze.weekStarts.options">
-														<option value="">-- Choose time --</option>
-													</select>
-												</div>
-											</div>
-											<div class="row">
-												<div class="small-6 columns">
-													<label for="weekendStarts" class="inline">Weekend Starts</label>
-												</div>
-												<div class="small-6 columns">
-													<select id="weekendStarts" class="radius" ng-model="settings.snooze.weekendStarts.data" ng-options="option for option in settings.snooze.weekendStarts.options">
-														<option value="">-- Choose time --</option>
-													</select>
+													<select id="workdayEnds" class="radius" ng-model="settings.snooze.data.workdayEnds.model" ng-required="true" ng-options="option for option in settings.snooze.data.workdayEnds.options" ng-change="settings.save('settings.snooze.data.workdayEnds')"></select>
 												</div>
 											</div>
 											<div class="row">
 												<div class="small-6 columns">
-													<label for="laterToday" class="inline">Later Today</label>
+													<label for="weekStarts" class="inline">
+														Week Starts&nbsp;&nbsp;
+														<i class="fa fa-check-circle success fx-fade" ng-show="settings.snooze.data.weekStarts.saved"></i>
+													</label>
 												</div>
 												<div class="small-6 columns">
-													<select id="laterToday" class="radius" ng-model="settings.snooze.laterToday.data" ng-options="option for option in settings.snooze.laterToday.options">
-														<option value="">-- Choose time --</option>
-													</select>
+													<select id="weekStarts" class="radius" ng-model="settings.snooze.data.weekStarts.model" ng-required="true" ng-options="option for option in settings.snooze.data.weekStarts.options" ng-change="settings.save('settings.snooze.data.weekStarts')"></select>
 												</div>
 											</div>
 											<div class="row">
 												<div class="small-6 columns">
-													<label for="someday" class="inline">Someday</label>
+													<label for="weekendStarts" class="inline">
+														Weekend Starts&nbsp;&nbsp;
+														<i class="fa fa-check-circle success fx-fade" ng-show="settings.snooze.data.weekendStarts.saved"></i>
+													</label>
 												</div>
 												<div class="small-6 columns">
-													<select id="someday" class="radius" ng-model="settings.snooze.someday.data" ng-options="option for option in settings.snooze.someday.options">
-														<option value="">-- Choose time --</option>
-													</select>
+													<select id="weekendStarts" class="radius" ng-model="settings.snooze.data.weekendStarts.model" ng-required="true" ng-options="option for option in settings.snooze.data.weekendStarts.options" ng-change="settings.save('settings.snooze.data.weekendStarts')"></select>
+												</div>
+											</div>
+											<div class="row">
+												<div class="small-6 columns">
+													<label for="laterToday" class="inline">
+														Later Today&nbsp;&nbsp;
+														<i class="fa fa-check-circle success fx-fade" ng-show="settings.snooze.data.laterToday.saved"></i>
+													</label>
+												</div>
+												<div class="small-6 columns">
+													<select id="laterToday" class="radius" ng-model="settings.snooze.data.laterToday.model" ng-required="true" ng-options="option for option in settings.snooze.data.laterToday.options" ng-change="settings.save('settings.snooze.data.laterToday')"></select>
+												</div>
+											</div>
+											<div class="row">
+												<div class="small-6 columns">
+													<label for="someday" class="inline">
+														Someday&nbsp;&nbsp;
+														<i class="fa fa-check-circle success fx-fade" ng-show="settings.snooze.data.someday.saved"></i>
+													</label>
+												</div>
+												<div class="small-6 columns">
+													<select id="someday" class="radius" ng-model="settings.snooze.data.someday.model" ng-required="true" ng-options="option for option in settings.snooze.data.someday.options" ng-change="settings.save('settings.snooze.data.someday')"></select>
 												</div>
 											</div>
 										</div>
